--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "mdast-util-to-markdown": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.5.5"
   }
 }
