--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datocms-plugin-translate-fields",
   "homepage": "https://github.com/voorhoede/datocms-plugin-translate-fields",
   "version": "1.3.0",
-  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `string` and `text` fields in DatoCMS",
+  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `string`, `text` and `seo` fields in DatoCMS",
   "engines": {
     "node": ">=16.0.0"
   },
