--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "datocms-plugin-translate-fields",
   "homepage": "https://github.com/voorhoede/datocms-plugin-translate-fields",
-  "version": "1.2.1",
-  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `string` and `text` fields in DatoCMS",
+  "version": "1.3.0",
+  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `string`, `text` and `seo` fields in DatoCMS",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -69,7 +69,7 @@
     "mdast-util-to-markdown": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.5.5"
   }
 }
