--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "structured-text",
     "deepl",
     "yandex",
-    "seo"
+    "seo",
+    "chatGPT",
+    "openAI",
+    "GPT-3"
   ],
   "files": [
     "build",
