--- a/package.json
+++ b/package.json
@@ -58,21 +58,21 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "react-scripts": "^5.0.1"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^16.11.14",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "datocms-plugin-sdk": "^0.5.2",
-    "datocms-react-ui": "^0.5.2",
+    "@types/lodash": "^4.14.192",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "datocms-plugin-sdk": "^0.7.4",
+    "datocms-react-ui": "^0.7.4",
     "html2json": "^1.0.2",
-    "mdast-util-from-markdown": "^1.2.0",
-    "mdast-util-to-markdown": "^1.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.5.5"
+    "mdast-util-from-markdown": "^1.3.0",
+    "mdast-util-to-markdown": "^1.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.5"
   }
 }
