--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
+    "dev": "cross-env REACT_APP_USE_MOCK=true npm run start",
     "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
     "build": "cross-env PUBLIC_URL='.' react-scripts build",
     "test": "react-scripts test",
