feat(jest.config.js): update jest config

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
     "build": "cross-env PUBLIC_URL='.' react-scripts build",
     "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject",
     "prepublishOnly": "npm run build"
   },
