--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.1.0"
   },
