--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "cross-env REACT_APP_USE_MOCK=true npm run start",
     "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
     "build": "cross-env PUBLIC_URL='.' react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject",
     "prepublishOnly": "npm run build"
   },
@@ -63,9 +64,13 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "react-scripts": "^5.0.1"
+    "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.0"
   },
   "dependencies": {
+    "@types/jest": "^29.5.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
