--- a/package.json
+++ b/package.json
@@ -13,8 +13,37 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "eject": "react-scripts eject",
-    "prepublishOnly": "npm run build"
+    "prepack": "npm run build",
+    "postversion": "git push --follow-tags"
   },
+  "dependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "datocms-plugin-sdk": "^0.7.13",
+    "datocms-react-ui": "^0.7.13",
+    "datocms-structured-text-slate-utils": "^2.1.2",
+    "datocms-structured-text-utils": "^2.0.4",
+    "html2json": "^1.0.2",
+    "mdast-util-from-markdown": "^1.3.0",
+    "mdast-util-to-markdown": "^1.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.1.0"
+  },
+  "files": [
+    "build",
+    "docs"
+  ],
   "keywords": [
     "datocms",
     "datocms-plugin",
@@ -33,12 +62,12 @@
     "openAI",
     "GPT-3"
   ],
-  "files": [
-    "build",
-    "docs"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voorhoede/datocms-plugin-translate-fields.git"
+  },
   "author": "Voorhoede",
-  "license": "MIT",
+  "license": "ISC",
   "datoCmsPlugin": {
     "title": "Translate",
     "previewImage": "docs/preview.png",
@@ -61,29 +90,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "jest": "^29.5.0",
-    "jest-fetch-mock": "^3.0.3",
-    "react-scripts": "^5.0.1",
-    "ts-jest": "^29.1.0"
-  },
-  "dependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "datocms-plugin-sdk": "^0.7.13",
-    "datocms-react-ui": "^0.7.13",
-    "datocms-structured-text-slate-utils": "^2.1.2",
-    "datocms-structured-text-utils": "^2.0.4",
-    "html2json": "^1.0.2",
-    "mdast-util-from-markdown": "^1.3.0",
-    "mdast-util-to-markdown": "^1.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
   }
 }
