--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "datocms-plugin-translate-fields",
   "homepage": "https://github.com/voorhoede/datocms-plugin-translate-fields",
   "version": "1.9.0",
-  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `rich-text`, `string`, `text` and `seo` fields in DatoCMS",
+  "description": "A DatoCMS plugin that gives you the ability to translate `structured-text`, `rich-text`, `string`, `text`, `seo` and `slug` fields in DatoCMS",
   "engines": {
     "node": ">=16.0.0"
   },
@@ -31,6 +31,7 @@
     "mdast-util-to-markdown": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "slugify": "^1.6.6",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "rich-text",
     "modular-content",
     "markdown",
+    "slug",
     "deepl",
     "yandex",
     "seo",
