--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "string",
     "structured-text",
     "rich-text",
+    "single-block",
     "modular-content",
     "markdown",
     "slug",
@@ -69,7 +70,8 @@
     "seo",
     "chatGPT",
     "openAI",
-    "GPT-3"
+    "GPT-3",
+    "GPT-4"
   ],
   "repository": {
     "type": "git",
@@ -92,15 +94,7 @@
       "prettier"
     ],
     "rules": {
-      "no-console": [
-        "error",
-        {
-          "allow": [
-            "warn",
-            "error"
-          ]
-        }
-      ],
+      "no-console": "warn",
       "prettier/prettier": 1
     }
   },
